# halo

./: .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: .env.example  package.json
apps/api/drizzle/: 0000_init.sql  0001_auth_modes.sql  0002_round_maria_hill.sql  0003_watch_state_display.sql  0004_addon_hide_catalogs.sql
apps/api/src/: app.ts  auth.ts  bootstrap.ts  db.ts  env.ts  index.ts  proxyGuard.ts  safeFetch.ts  schema.ts
apps/api/test/: app.test.ts  helpers.ts  localAuth.test.ts  nextVideo.test.ts  proxyGuard.test.ts  resolution.test.ts  safeFetch.test.ts
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: cdp.mjs  screenshot.ps1
apps/desktop/src/: App.tsx  api.ts  homeRows.ts  index.css  localAuth.ts  main.tsx  mpv.ts  nav.tsx  oidc.ts  queries.ts  searchHistory.ts  session.tsx  settings.ts  subtitleMemory.ts  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  mpv.rs  oauth.rs
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile-native/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/mobile-native/composeApp/: build.gradle.kts
apps/mobile-native/fixtures/: .gitignore  README.md  __init__.py  fixture_server.py
apps/mobile-native/iosApp/: project.yml
apps/mobile-native/patches/: mpv-ios-live-resize.patch
patches/: README.md  expo-libvlc-player@7.1.2.patch
(+121 files in other folders)
