[package]
name = "halo-desktop"
version = "0.1.0"
description = "Halo desktop client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"

[profile.dev]
opt-level = 1
